Updated text in all language json files

--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Разходите за образование се увеличават във всички страни от ЕС",
-  "subheading": "Държавните разходи за военна отбрана като процент от БВП в страните от Европейския съюз през 2020 г.",
-  "legend1": "Няма данни",
-  "tooltip1": "от БВП",
+  "heading": "Въглеродна интензивност на производството на електроенергия във всички страни от ЕС",
+  "subheading": "Интензитет на емисиите на парникови газове (ПГ) по държави-членки през 2020 г",
+  "legend1": "в еквивалент на въглероден диоксид на киловатчас",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Източник",
-  "textSource": "Евростат",
+  "textSource": "ЕИП: https://www.eea.europa.eu/",
   "textNoteDescription": "Забележка",
-  "textNote": "Държавни разходи по COFOG (класификация на функциите на правителството на UNSD, възпроизведена в ESA2010) функция и вид.",
+  "textNote": "Европейска мрежа за информация и наблюдение на околната среда (Eionet)",
   "textDataAccess": "Достъп до данните",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Кликнете за повече информация",
