--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Výdaje na vzdělávání ve všech zemích EU",
-  "subheading": "Vládní výdaje na vojenskou obranu jako procento HDP v zemích Evropské unie v roce 2020",
-  "legend1": "Nejsou k dispozici žádné údaje",
-  "tooltip1": "HDP",
+  "heading": "Uhlíková náročnost výroby elektřiny napříč všemi zeměmi EU",
+  "subheading": "Intenzita emisí skleníkových plynů (GHG) na členské státy v roce 2020",
+  "legend1": "v ekvivalentu oxidu uhličitého na kilowatthodinu",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Zdroj",
-  "textSource": "Eurostat",
+  "textSource": "EHP: https://www.eea.europa.eu/",
   "textNoteDescription": "Poznámka",
-  "textNote": "Vládní výdaje podle funkce a typu COFOG (klasifikace funkcí vlády UNSD, replikovaná v ESA2010).",
+  "textNote": "Evropská informační a pozorovací síť pro životní prostředí (Eionet)",
   "textDataAccess": "Přístup k datům",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=cs",
   "textCountryClick": "Klikněte pro více informací",
