--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Udgifter til uddannelse op i alle EU-lande",
-  "subheading": "Offentlige udgifter til militært forsvar som en procentdel af BNP i lande i Den Europæiske Union i 2020",
-  "legend1": "Ingen tilgængelig data",
-  "tooltip1": "af BNP",
+  "heading": "Kulstofintensitet i produktionen af elektricitet i alle EU-lande",
+  "subheading": "Drivhusgasemissionsintensitet (GHG) pr. medlemslande i 2020",
+  "legend1": "i kuldioxidækvivalent pr. kilowatttime",
+  "tooltip1": "g CO2e/kW t",
   "textSourceDescription": "Kilde",
-  "textSource": "Eurostat",
+  "textSource": "EØS: https://www.eea.europa.eu/",
   "textNoteDescription": "Bemærk",
-  "textNote": "Offentlige udgifter efter COFOG (UNSD-klassifikation af offentlige funktioner, gentaget i ESA2010) funktion og type.",
-  "textDataAccess": "Få adgang til dataene",
+  "textNote": "European Environment Information and Observation Network (Eionet)",
+  "textDataAccess": "Få adgang til data",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=da",
   "textCountryClick": "Klik for mere info",
   "extraInfoText_AL": "Kandidatland siden 2003",
