--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Bildungsausgaben in allen EU-Ländern gestiegen",
-  "subheading": "Staatliche Verteidigungsausgaben in Prozent des BIP in den Ländern der Europäischen Union im Jahr 2020",
-  "legend1": "Keine Daten verfügbar",
-  "tooltip1": "des BIP",
+  "heading": "CO2-Intensität der Stromerzeugung in allen EU-Ländern",
+  "subheading": "Intensität der Treibhausgasemissionen (THG) nach Mitgliedsstaaten im Jahr 2020",
+  "legend1": "in Kohlendioxidäquivalent pro Kilowattstunde",
+  "tooltip1": "g CO2e/kWh",
   "textSourceDescription": "Quelle",
-  "textSource": "Eurostat",
+  "textSource": "EWR: https://www.eea.europa.eu/",
   "textNoteDescription": "Notiz",
-  "textNote": "Staatsausgaben nach Funktion und Art der COFOG (UNSD-Klassifikation der Staatsfunktionen, repliziert im ESVG 2010).",
+  "textNote": "Europäisches Umweltinformations- und -beobachtungsnetz (Eionet)",
   "textDataAccess": "Greifen Sie auf die Daten zu",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Klicken Sie für weitere Informationen",
