--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Αυξάνονται οι δαπάνες για την εκπαίδευση σε όλες τις χώρες της ΕΕ",
-  "subheading": "Δαπάνες γενικής κυβέρνησης για στρατιωτική άμυνα ως ποσοστό του ΑΕΠ στις χώρες της Ευρωπαϊκής Ένωσης το 2020",
-  "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
-  "tooltip1": "του ΑΕΠ",
+  "heading": "Ένταση άνθρακα της παραγωγής ηλεκτρικής ενέργειας σε όλες τις χώρες της ΕΕ",
+  "subheading": "Ένταση εκπομπών αερίων θερμοκηπίου (GHG) ανά κράτος μέλος το 2020",
+  "legend1": "σε ισοδύναμο διοξειδίου του άνθρακα ανά κιλοβατώρα",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Πηγή",
-  "textSource": "Eurostat",
+  "textSource": "ΕΟΧ: https://www.eea.europa.eu/",
   "textNoteDescription": "Σημείωση",
-  "textNote": "Κρατικές δαπάνες κατά COFOG (ταξινόμηση UNSD των λειτουργιών της κυβέρνησης, που αναπαράγεται στο ESA2010) λειτουργία και τύπος.",
+  "textNote": "Ευρωπαϊκό Δίκτυο Πληροφοριών και Παρατηρήσεων για το Περιβάλλον (Eionet)",
   "textDataAccess": "Πρόσβαση στα δεδομένα",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Κάντε κλικ για περισσότερες πληροφορίες",
