--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Koulutusmenot kasvavat kaikissa EU-maissa",
-  "subheading": "Julkiset menot sotilaalliseen puolustukseen suhteessa BKT:hen Euroopan unionin maissa vuonna 2020",
-  "legend1": "Tietoja ei ole saatavilla",
-  "tooltip1": "BKT:sta",
+  "heading": "Sähköntuotannon hiili-intensiteetti kaikissa EU-maissa",
+  "subheading": "Kasvihuonekaasupäästöjen (GHG) intensiteetti jäsenvaltioittain vuonna 2020",
+  "legend1": "hiilidioksidiekvivalenttia kilowattituntia kohden",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Lähde",
-  "textSource": "Eurostat",
+  "textSource": "ETA: https://www.eea.europa.eu/",
   "textNoteDescription": "Merkintä",
-  "textNote": "Julkiset menot COFOG:n (UNSD:n julkishallinnon toimintojen luokittelu, jäljennetty EKT2010:ssä) toiminnon ja tyypin mukaan.",
+  "textNote": "Euroopan ympäristötieto- ja seurantaverkosto (Eionet)",
   "textDataAccess": "Käytä tietoja",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=fi",
   "textCountryClick": "Napsauta saadaksesi lisätietoja",
