--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Potrošnja na obrazovanje raste u svim zemljama EU",
-  "subheading": "Rashodi opće države za vojnu obranu kao postotak BDP-a u zemljama Europske unije u 2020.",
-  "legend1": "Nema dostupnih podataka",
-  "tooltip1": "BDP-a",
+  "heading": "Intenzitet ugljika u proizvodnji električne energije u svim zemljama EU",
+  "subheading": "Intenzitet emisije stakleničkih plinova (GHG) po državama članicama u 2020",
+  "legend1": "u ekvivalentu ugljičnog dioksida po kilovatsatu",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Izvor",
-  "textSource": "Eurostat",
+  "textSource": "EEA: https://www.eea.europa.eu/",
   "textNoteDescription": "Bilješka",
-  "textNote": "Državni rashodi prema funkciji i vrsti COFOG (UNSD klasifikacija funkcija vlade, replicirana u ESA2010).",
+  "textNote": "Europska mreža za informacije i promatranje okoliša (Eionet)",
   "textDataAccess": "Pristup podacima",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=hr",
   "textCountryClick": "Kliknite za više informacija",
