--- a/static/languages/hu.json
+++ b/static/languages/hu.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Az oktatási kiadások az EU összes országában emelkednek",
-  "subheading": "Az államháztartás katonai védelemre fordított kiadásai a GDP százalékában az Európai Unió országaiban 2020-ban",
-  "legend1": "Nincs elérhető adat",
-  "tooltip1": "a GDP",
+  "heading": "A villamosenergia-termelés szén-dioxid-intenzitása az EU összes országában",
+  "subheading": "Az üvegházhatású gázok kibocsátásának (ÜHG) intenzitása tagállamonként 2020-ban",
+  "legend1": "szén-dioxid egyenértékben kilowattóránként",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Forrás",
-  "textSource": "Eurostat",
+  "textSource": "EGT: https://www.eea.europa.eu/",
   "textNoteDescription": "jegyzet",
-  "textNote": "Kormányzati kiadások COFOG (UNSD Classification of Government Functions, replikálva az ESA2010-ben) funkció és típus szerint.",
+  "textNote": "Európai Környezetvédelmi Információs és Megfigyelő Hálózat (Eionet)",
   "textDataAccess": "Hozzáférés az adatokhoz",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Kattintson további információkért",
