--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Izglītības izdevumi visās ES valstīs",
-  "subheading": "Vispārējie valdības izdevumi militārajai aizsardzībai procentos no IKP Eiropas Savienības valstīs 2020. gadā",
-  "legend1": "Nav pieejami dati",
-  "tooltip1": "no IKP",
+  "heading": "Oglekļa intensitāte elektroenerģijas ražošanā visās ES valstīs",
+  "subheading": "Siltumnīcefekta gāzu emisiju (SEG) intensitāte uz dalībvalstīm 2020. gadā",
+  "legend1": "oglekļa dioksīda ekvivalentā uz kilovatstundu",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Avots",
-  "textSource": "Eurostat",
+  "textSource": "EVA: https://www.eea.europa.eu/",
   "textNoteDescription": "Piezīme",
-  "textNote": "Valdības izdevumi pēc COFOG (UNSD valdības funkciju klasifikācija, replicēta EKS2010) funkcijas un veida.",
+  "textNote": "Eiropas Vides informācijas un novērojumu tīkls (Eionet)",
   "textDataAccess": "Piekļūstiet datiem",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Noklikšķiniet, lai iegūtu vairāk informācijas",
