--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,12 +1,12 @@
 {
-  "heading": "L-infiq fl-edukazzjoni jiżdied fil-pajjiżi kollha tal-UE",
-  "subheading": "In-nefqa ġenerali tal-gvern fuq id-difiża militari bħala perċentwal tal-PGD fil-pajjiżi tal-Unjoni Ewropea fl-2020",
-  "legend1": "L-ebda dejta disponibbli",
-  "tooltip1": "tal-PGD",
+  "heading": "Intensità tal-karbonju tal-produzzjoni tal-elettriku fil-pajjiżi kollha tal-UE",
+  "subheading": "Intensità tal-emissjonijiet tal-gassijiet serra (GHG) għal kull stati membri fl-2020",
+  "legend1": "f'ekwivalenti ta' dijossidu tal-karbonju għal kull kilowatt siegħa",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Sors",
-  "textSource": "Eurostat",
+  "textSource": "ŻEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Nota",
-  "textNote": "Nefqa tal-gvern skont il-funzjoni u t-tip tal-COFOG (klassifikazzjoni UNSD tal-funzjonijiet tal-gvern, replikata fl-ESA2010).",
+  "textNote": "Netwerk Ewropew ta' Informazzjoni u Osservazzjoni Ambjentali (Eionet)",
   "textDataAccess": "Aċċessa għad-data",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Ikklikkja għal aktar informazzjoni",
