--- a/static/languages/pl.json
+++ b/static/languages/pl.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Wzrost wydatków na edukację we wszystkich krajach UE",
-  "subheading": "Wydatki sektora instytucji rządowych i samorządowych na obronę wojskową jako procent PKB w krajach Unii Europejskiej w 2020 roku",
-  "legend1": "Brak dostępnych danych",
-  "tooltip1": "PKB",
+  "heading": "Emisja dwutlenku węgla w produkcji energii elektrycznej we wszystkich krajach UE",
+  "subheading": "Intensywność emisji gazów cieplarnianych (GHG) według krajów członkowskich w 2020 r.",
+  "legend1": "w ekwiwalencie dwutlenku węgla na kilowatogodzinę",
+  "tooltip1": "g CO2e/kWh",
   "textSourceDescription": "Źródło",
-  "textSource": "Eurostat",
+  "textSource": "EOG: https://www.eea.europa.eu/",
   "textNoteDescription": "Notatka",
-  "textNote": "Wydatki rządowe według COFOG (klasyfikacja funkcji rządu według UNSD, powtórzona w ESA2010) funkcji i rodzaju.",
+  "textNote": "Europejska Sieć Informacji i Obserwacji Środowiska (Eionet)",
   "textDataAccess": "Uzyskaj dostęp do danych",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Kliknij, aby uzyskać więcej informacji",
