--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Cheltuielile pentru educație în toate țările UE",
-  "subheading": "Cheltuielile publice generale pentru apărarea militară ca procent din PIB în țările Uniunii Europene în 2020",
-  "legend1": "Nici o informatie disponibila",
-  "tooltip1": "a PIB-ului",
+  "heading": "Intensitatea carbonului producției de energie electrică în toate țările UE",
+  "subheading": "Intensitatea emisiilor de gaze cu efect de seră (GES) per statele membre în 2020",
+  "legend1": "în echivalent dioxid de carbon pe kilowatt oră",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Sursă",
-  "textSource": "Eurostat",
+  "textSource": "SEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Notă",
-  "textNote": "Cheltuielile guvernamentale după funcția și tipul COFOG (clasificarea UNSD a funcțiilor guvernamentale, replicată în ESA2010).",
+  "textNote": "Rețeaua europeană de informare și observare a mediului (Eionet)",
   "textDataAccess": "Accesați datele",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Click pentru mai multe informații",
