--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Výdavky na vzdelávanie vo všetkých krajinách EÚ",
-  "subheading": "Výdavky verejnej správy na vojenskú obranu ako percento HDP v krajinách Európskej únie v roku 2020",
-  "legend1": "Nie sú k dispozícii žiadne údaje",
-  "tooltip1": "HDP",
+  "heading": "Uhlíková náročnosť výroby elektriny vo všetkých krajinách EÚ",
+  "subheading": "Intenzita emisií skleníkových plynov (GHG) na členské štáty v roku 2020",
+  "legend1": "v ekvivalente oxidu uhličitého na kilowatthodinu",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Zdroj",
-  "textSource": "Eurostat",
+  "textSource": "EHP: https://www.eea.europa.eu/",
   "textNoteDescription": "Poznámka",
-  "textNote": "Vládne výdavky podľa funkcie a typu COFOG (klasifikácia funkcií verejnej správy OSN, replikovaná v ESA2010).",
+  "textNote": "Európska environmentálna informačná a pozorovacia sieť (Eionet)",
   "textDataAccess": "Prístup k údajom",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=sk",
   "textCountryClick": "Kliknite pre viac informácií",
