--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Izdatki za izobraževanje so se povečali v vseh državah EU",
-  "subheading": "Državni izdatki za vojaško obrambo kot odstotek BDP v državah Evropske unije leta 2020",
-  "legend1": "Podatkov ni na voljo",
-  "tooltip1": "BDP",
+  "heading": "Ogljikova intenzivnost proizvodnje električne energije v vseh državah EU",
+  "subheading": "Intenzivnost emisij toplogrednih plinov (GHG) po državah članicah leta 2020",
+  "legend1": "v ekvivalentu ogljikovega dioksida na kilovatno uro",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Vir",
-  "textSource": "Eurostat",
+  "textSource": "EGP: https://www.eea.europa.eu/",
   "textNoteDescription": "Opomba",
-  "textNote": "Državni izdatki po funkciji in vrsti COFOG (UNSD klasifikacija funkcij vlade, ponovljena v ESR 2010).",
-  "textDataAccess": "Dostop do podatkov",
+  "textNote": "Evropsko okoljsko informacijsko in opazovalno omrežje (Eionet)",
+  "textDataAccess": "Dostopajte do podatkov",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Kliknite za več informacij",
   "extraInfoText_AL": "Država kandidatka od leta 2003",
