--- a/static/languages/sv.json
+++ b/static/languages/sv.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Utgifterna för utbildning ökar i alla EU-länder",
-  "subheading": "Offentliga utgifter för militärt försvar i procent av BNP i länder i Europeiska unionen 2020",
-  "legend1": "Ingen data tillgänglig",
-  "tooltip1": "av BNP",
+  "heading": "Kolintensiteten i elproduktionen i alla EU-länder",
+  "subheading": "Intensiteten för utsläpp av växthusgaser (GHG) per medlemsländer 2020",
+  "legend1": "i koldioxidekvivalenter per kilowattimme",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Källa",
-  "textSource": "Eurostat",
+  "textSource": "EES: https://www.eea.europa.eu/",
   "textNoteDescription": "Notera",
-  "textNote": "Offentliga utgifter efter COFOG (UNSD-klassificering av statliga funktioner, replikerad i ESA2010) funktion och typ.",
+  "textNote": "European Environment Information and Observation Network (Eionet)",
   "textDataAccess": "Få åtkomst till data",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Klicka för mer info",
