--- a/static/languages/es.json
+++ b/static/languages/es.json
@@ -1,12 +1,12 @@
 {
-  "heading": "El gasto en educación aumenta en todos los países de la UE",
-  "subheading": "Gasto del gobierno general en defensa militar como porcentaje del PIB en países de la Unión Europea en 2020",
-  "legend1": "Datos no disponibles",
-  "tooltip1": "del PIB",
+  "heading": "Intensidad de carbono de la producción de electricidad en todos los países de la UE",
+  "subheading": "Intensidad de las emisiones de gases de efecto invernadero (GEI) por estados miembros en 2020",
+  "legend1": "en dióxido de carbono equivalente por kilovatio hora",
+  "tooltip1": "g CO2e/kW·h",
   "textSourceDescription": "Fuente",
-  "textSource": "Eurostat",
+  "textSource": "EEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Nota",
-  "textNote": "Gasto público por función y tipo de COFOG (clasificación de funciones de gobierno de la UNSD, replicada en ESA2010).",
+  "textNote": "Red Europea de Información y Observación del Medio Ambiente (Eionet)",
   "textDataAccess": "Accede a los datos",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Haga clic para obtener más información",
