--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Hariduskulud kõigis ELi riikides",
-  "subheading": "Valitsussektori kulutused sõjalisele kaitsele protsendina SKTst Euroopa Liidu riikides 2020. aastal",
-  "legend1": "Andmed puuduvad",
-  "tooltip1": "SKTst",
+  "heading": "Elektritootmise süsinikusisaldus kõigis EL-i riikides",
+  "subheading": "Kasvuhoonegaaside heitkoguste (KHG) intensiivsus liikmesriikide kohta 2020. aastal",
+  "legend1": "süsinikdioksiidi ekvivalendis kilovatt-tunni kohta",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Allikas",
-  "textSource": "Eurostat",
+  "textSource": "EMP: https://www.eea.europa.eu/",
   "textNoteDescription": "Märge",
-  "textNote": "Valitsemissektori kulud COFOG-i (UNSD klassifikatsioon valitsusfunktsioonide klassifikatsioonist, korratud ESA2010-s) funktsiooni ja tüübi järgi.",
+  "textNote": "Euroopa keskkonnateabe ja -vaatlusvõrgustik (Eionet)",
   "textDataAccess": "Juurdepääs andmetele",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Lisateabe saamiseks klõpsake",
