--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Les dépenses d'éducation augmentent dans tous les pays de l'UE",
-  "subheading": "Dépenses publiques de défense militaire en pourcentage du PIB dans les pays de l'Union européenne en 2020",
-  "legend1": "Pas de données disponibles",
-  "tooltip1": "du PIB",
+  "heading": "Intensité carbone de la production d'électricité dans tous les pays de l'UE",
+  "subheading": "Intensité des émissions de gaz à effet de serre (GES) par État membre en 2020",
+  "legend1": "en équivalent dioxyde de carbone par kilowattheure",
+  "tooltip1": "g CO2e/kWh",
   "textSourceDescription": "La source",
-  "textSource": "Eurostat",
+  "textSource": "EEE : https://www.eea.europa.eu/",
   "textNoteDescription": "Noter",
-  "textNote": "Dépenses publiques par COFOG (Classification UNSD des fonctions du gouvernement, reproduite dans le SEC 2010) fonction et type.",
+  "textNote": "Réseau européen d'information et d'observation de l'environnement (Eionet)",
   "textDataAccess": "Accéder aux données",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Cliquez pour plus d'informations",
