--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Tháinig méadú ar chaiteachas oideachais ar fud thíortha uile an AE",
-  "subheading": "Caiteachas an rialtais ghinearálta ar chosaint mhíleata mar chéatadán den OTI i dtíortha an Aontais Eorpaigh in 2020",
-  "legend1": "Níl aon sonraí ar fáil",
-  "tooltip1": "de OTI",
+  "heading": "Déine charbóin i dtáirgeadh an leictreachais ar fud na dtíortha AE go léir",
+  "subheading": "Déine astaíochtaí gás ceaptha teasa (GHG) in aghaidh na mBallstát in 2020",
+  "legend1": "i gcoibhéis dé-ocsaíd charbóin in aghaidh na cileavata uair an chloig",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Foinse",
-  "textSource": "Eurostat",
+  "textSource": "EEA: https://www.eea.europa.eu/",
   "textNoteDescription": "Nóta",
-  "textNote": "Caiteachas rialtais de réir feidhme agus cineál COFOG (aicmiú UNSD ar fheidhmeanna an rialtais, arna mhacasamhlú in CCE2010).",
+  "textNote": "An Líonra Eorpach um Fhaisnéis agus um Fhaire ar an gComhshaol (Eionet)",
   "textDataAccess": "Faigh rochtain ar na sonraí",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=ga",
   "textCountryClick": "Cliceáil le haghaidh tuilleadh eolais",
