--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Spesa per l'istruzione in aumento in tutti i paesi dell'UE",
-  "subheading": "Spesa delle amministrazioni pubbliche per la difesa militare in percentuale del PIL nei paesi dell'Unione Europea nel 2020",
-  "legend1": "Nessun dato disponibile",
-  "tooltip1": "del PIL",
+  "heading": "Intensità di carbonio della produzione di elettricità in tutti i paesi dell'UE",
+  "subheading": "Intensità delle emissioni di gas serra (GHG) per stato membro nel 2020",
+  "legend1": "in anidride carbonica equivalente per kilowattora",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Fonte",
-  "textSource": "Eurostat",
+  "textSource": "SEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Nota",
-  "textNote": "Spesa pubblica per funzione e tipologia COFOG (classificazione UNSD delle funzioni di governo, replicata in ESA2010).",
+  "textNote": "Rete europea di informazione e osservazione ambientale (Eionet)",
   "textDataAccess": "Accedi ai dati",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Clicca per maggiori informazioni",
