--- a/static/languages/lt.json
+++ b/static/languages/lt.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Išlaidos švietimui visose ES šalyse",
-  "subheading": "Bendrosios valdžios išlaidos karinei gynybai procentais nuo BVP Europos Sąjungos šalyse 2020 m",
-  "legend1": "Nėra duomenų",
-  "tooltip1": "BVP",
+  "heading": "Anglies dioksido intensyvumas gaminant elektros energiją visose ES šalyse",
+  "subheading": "Šiltnamio efektą sukeliančių dujų emisijos (ŠESD) intensyvumas pagal valstybes nares 2020 m",
+  "legend1": "anglies dioksido ekvivalentu vienai kilovatvalandei",
+  "tooltip1": "g CO2e/kW val",
   "textSourceDescription": "Šaltinis",
-  "textSource": "Eurostatas",
+  "textSource": "EEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Pastaba",
-  "textNote": "Valdžios išlaidos pagal COFOG (UNSD vyriausybės funkcijų klasifikatorius, pakartotas ESS2010) funkciją ir tipą.",
+  "textNote": "Europos aplinkos informacijos ir stebėjimo tinklas (Eionet)",
   "textDataAccess": "Pasiekite duomenis",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Spustelėkite norėdami gauti daugiau informacijos",
