--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Onderwijsuitgaven stijgen in alle EU-landen",
-  "subheading": "Algemene overheidsuitgaven voor militaire defensie als percentage van het BBP in landen van de Europese Unie in 2020",
-  "legend1": "Geen gegevens beschikbaar",
-  "tooltip1": "van het BBP",
+  "heading": "Koolstofintensiteit van de productie van elektriciteit in alle EU-landen",
+  "subheading": "Broeikasgasemissie-intensiteit (BKG) per lidstaat in 2020",
+  "legend1": "in koolstofdioxide-equivalent per kilowattuur",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Bron",
-  "textSource": "Eurostat",
+  "textSource": "EER: https://www.eea.europa.eu/",
   "textNoteDescription": "Opmerking",
-  "textNote": "Overheidsuitgaven volgens COFOG (UNSD-classificatie van overheidsfuncties, gerepliceerd in ESR2010) functie en type.",
+  "textNote": "Europees milieu-informatie- en observatienetwerk (Eionet)",
   "textDataAccess": "Toegang tot de gegevens",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Klik voor meer info",
