--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,12 +1,12 @@
 {
-  "heading": "Gastos com educação aumentam em todos os países da UE",
-  "subheading": "Despesas do governo geral em defesa militar como porcentagem do PIB nos países da União Europeia em 2020",
-  "legend1": "Nenhum dado disponível",
-  "tooltip1": "do PIB",
+  "heading": "Intensidade de carbono da produção de eletricidade em todos os países da UE",
+  "subheading": "Intensidade de emissão de gases de efeito estufa (GEE) por estados membros em 2020",
+  "legend1": "em dióxido de carbono equivalente por quilowatt-hora",
+  "tooltip1": "g CO2e/kWh",
   "textSourceDescription": "Fonte",
-  "textSource": "Eurostat",
+  "textSource": "EEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Observação",
-  "textNote": "Despesas governamentais por COFOG (classificação UNSD das funções do governo, replicada no SEC2010) função e tipo.",
+  "textNote": "Rede Europeia de Informação e Observação do Ambiente (Eionet)",
   "textDataAccess": "Acesse os dados",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Clique para mais informações",
